# MyWorkSpace

./: .gitignore  C_CPP.code-workspace  LICENSE  Python.code-workspace  Verilog.code-workspace  sh.exe.stackdump
CCS/.jxbrowser-data/: History  History-journal  Visited Links
CCS/BirdFlight_C2000/: .ccsproject  .cproject  .gitignore  .project  2837xD_RAM_lnk_cpu1.cmd  main.c  task.h
CCS/BirdFlight_V2.0/: .cproject  .project  2837xD_RAM_lnk_cpu1.cmd  Bird_main.c  task.h  test.ccxml
CPP/MyCode/Project/untitled1/: CMakeLists.txt  main.cpp
CPP/MyCode/opencv/ocr/: CMakeLists.txt  DetectNumber.hpp  FeatureExtraction.hpp  linefinder.hpp  main.cpp
ESP32/Arduino/: test.json
MATLAB/: test.m
MATLAB/assignment4/: app1.mlapp  app2.mlapp
MATLAB/assignment5/: a2.m  a3.m  a5.m  a6.m
MATLAB/calculator/: app1.mlapp
MATLAB/lab5/: cal.m  calarcsinx.m  factorial.m  fib.p  functional.m  mycal.m  mycircle.m  test.m
PYTHON/MyCode/: addition.py  autopaste.py  blur.py  characterCount.py  ditionary.py  hash.py  helloworld.py  regex.py  string.py
STM32/ProjectTemplate/: Project.eide-template
SolidWork/: ToolboxStandards.xml
SolidWork/browser/: ToolboxFiles.index
SolidWork/updates/: 0_Index Toolbox content.tbox  1600_Install AS.tbox  1600_Install Ansi Inch.tbox  1600_Install Ansi Metric.tbox  1600_Install BSI.tbox  1600_Install CISC.tbox  1600_Install DIN.tbox  1600_Install GB.tbox  1600_Install IS.tbox  1600_Install ISO.tbox  1600_Install JIS.tbox  1600_Install KS.tbox  1600_Install MIL.tbox  1600_Install PEM Inch.tbox  1600_Install PEM Metric.tbox  1600_Install SKF.tbox  (+13 more)
(+11684 files in other folders)
